[package]
name = "rolling_hash"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.0"
crypto-mac = "0.9.1"
generic-array = "0.14.4"
